--- a/mentbotapp/src/index.html
+++ b/mentbotapp/src/index.html
@@ -15,21 +15,21 @@
   <meta name="description" content="CoreUI - Free Angular Admin Template">
   <meta name="author" content="Łukasz Holeczek">
   <meta name="keyword" content="Bootstrap,Admin,Template,Free,Angular,Dashboard,Typescript">
-	<link rel="shortcut icon" href="assets/favicon.ico">
-	<title>CoreUI - Free Angular Admin Template</title>
-  <!-- Global site tag (gtag.js) - Google Analytics -->
+	<link rel="shortcut icon" href="#">
+	<title>Mentbot</title>
+ 
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-118965717-3"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
-    // Shared ID
+   
     gtag('config', 'UA-118965717-3');
-    // Angular ID
+    
     gtag('config', 'UA-118965717-4');
   </script>
 </head>
 <body class="app">
-  <!-- App Loading... -->
+
 </body>
 </html>
